# eZmax-SDK-cpp-qt-client

./: README.md
.openapi-generator/: FILES
client/: Activesession_ListElement.cpp  Activesession_ListElement.h  Activesession_Response.cpp  Activesession_Response.h  Activesession_ResponseCompound.cpp  Activesession_ResponseCompound.h  Activesession_ResponseCompound_Apikey.cpp  Activesession_ResponseCompound_Apikey.h  Activesession_ResponseCompound_User.cpp  Activesession_ResponseCompound_User.h  Activesession_generateFederationToken_v1_Request.cpp  Activesession_generateFederationToken_v1_Request.h  Activesession_generateFederationToken_v1_Response.cpp  Activesession_generateFederationToken_v1_Response.h  Activesession_generateFederationToken_v1_Response_mPayload.cpp  Activesession_generateFederationToken_v1_Response_mPayload.h  Activesession_getCurrent_v1_Response.cpp  Activesession_getCurrent_v1_Response.h  Activesession_getCurrent_v1_Response_mPayload.cpp  Activesession_getCurrent_v1_Response_mPayload.h  Activesession_getCurrent_v2_Response.cpp  Activesession_getCurrent_v2_Response.h  Activesession_getCurrent_v2_Response_mPayload.cpp  Activesession_getCurrent_v2_Response_mPayload.h  Activesession_getList_v1_Response.cpp  Activesession_getList_v1_Response.h  Activesession_getList_v1_Response_mPayload.cpp  Activesession_getList_v1_Response_mPayload.h  Address_Request.cpp  Address_Request.h  Address_RequestCompound.cpp  Address_RequestCompound.h  Address_Response.cpp  Address_Response.h  Address_ResponseCompound.cpp  Address_ResponseCompound.h  Apikey_ListElement.cpp  Apikey_ListElement.h  Apikey_Request.cpp  Apikey_Request.h  (+6896 more)
