cmake_minimum_required(VERSION 3.2)

project(client)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

if (MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
else ()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -Wno-unused-variable")
endif ()

find_package(Qt5Core REQUIRED)
find_package(Qt5Network REQUIRED)

add_library(${PROJECT_NAME}
    OAIActivesession_Response.cpp
    OAIActivesession_ResponseCompound.cpp
    OAIActivesession_ResponseCompound_Apikey.cpp
    OAIActivesession_ResponseCompound_User.cpp
    OAIActivesession_ResponseCompound_allOf.cpp
    OAIActivesession_getCurrent_v1_Response.cpp
    OAIActivesession_getCurrent_v1_Response_allOf.cpp
    OAIActivesession_getCurrent_v1_Response_mPayload.cpp
    OAIAddress_Request.cpp
    OAIApikey_Request.cpp
    OAIApikey_RequestCompound.cpp
    OAIApikey_Response.cpp
    OAIApikey_createObject_v1_Request.cpp
    OAIApikey_createObject_v1_Response.cpp
    OAIApikey_createObject_v1_Response_allOf.cpp
    OAIApikey_createObject_v1_Response_mPayload.cpp
    OAIAttempt_Response.cpp
    OAIAuthenticate_authenticate_v2_Request.cpp
    OAIAuthenticate_authenticate_v2_Response.cpp
    OAIAuthenticate_authenticate_v2_Response_allOf.cpp
    OAIAuthenticate_authenticate_v2_Response_mPayload.cpp
    OAICommon_Audit.cpp
    OAICommon_Response.cpp
    OAICommon_Response_Error.cpp
    OAICommon_Response_Error_sTemporaryFileUrl.cpp
    OAICommon_Response_Error_sTemporaryFileUrl_allOf.cpp
    OAICommon_Response_Filter.cpp
    OAICommon_Response_getList.cpp
    OAICommon_Response_objDebug.cpp
    OAICommon_Response_objDebugPayload.cpp
    OAICommon_Response_objDebugPayload_getList.cpp
    OAICommon_Response_objDebugPayload_getList_allOf.cpp
    OAICommon_Response_objSQLQuery.cpp
    OAICommon_Webhook.cpp
    OAICommon_getAutocomplete_v1_Response.cpp
    OAICommon_getAutocomplete_v1_Response_allOf.cpp
    OAICommon_getList_v1_Response_mPayload.cpp
    OAIContact_Request.cpp
    OAIContact_RequestCompound.cpp
    OAIContact_RequestCompound_allOf.cpp
    OAIContactinformations_Request.cpp
    OAIContactinformations_RequestCompound.cpp
    OAIContactinformations_RequestCompound_allOf.cpp
    OAICustom_AutocompleteElement_Response.cpp
    OAICustom_Ezsignfoldersignerassociationstatus_Response.cpp
    OAICustom_Ezsignsignaturestatus_Response.cpp
    OAICustom_FormDataDocument_Response.cpp
    OAICustom_FormDataSigner_Response.cpp
    OAICustom_FormsDataFolder_Response.cpp
    OAICustom_WordPositionOccurence_Response.cpp
    OAICustom_WordPositionWord_Response.cpp
    OAIEmail_Request.cpp
    OAIEzsignbulksend_ListElement.cpp
    OAIEzsignbulksend_getList_v1_Response.cpp
    OAIEzsignbulksend_getList_v1_Response_allOf.cpp
    OAIEzsignbulksend_getList_v1_Response_mPayload.cpp
    OAIEzsignbulksend_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsigndocument_Request.cpp
    OAIEzsigndocument_RequestCompound.cpp
    OAIEzsigndocument_RequestPatch.cpp
    OAIEzsigndocument_Response.cpp
    OAIEzsigndocument_ResponseCompound.cpp
    OAIEzsigndocument_ResponseCompound_allOf.cpp
    OAIEzsigndocument_applyEzsigntemplate_v1_Request.cpp
    OAIEzsigndocument_applyEzsigntemplate_v1_Response.cpp
    OAIEzsigndocument_applyEzsigntemplate_v2_Request.cpp
    OAIEzsigndocument_applyEzsigntemplate_v2_Response.cpp
    OAIEzsigndocument_createObject_v1_Request.cpp
    OAIEzsigndocument_createObject_v1_Response.cpp
    OAIEzsigndocument_createObject_v1_Response_allOf.cpp
    OAIEzsigndocument_createObject_v1_Response_mPayload.cpp
    OAIEzsigndocument_deleteObject_v1_Response.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Request.cpp
    OAIEzsigndocument_editEzsignsignatures_v1_Response.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response_allOf.cpp
    OAIEzsigndocument_getDownloadUrl_v1_Response_mPayload.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response_allOf.cpp
    OAIEzsigndocument_getEzsignpages_v1_Response_mPayload.cpp
    OAIEzsigndocument_getFormData_v1_Response.cpp
    OAIEzsigndocument_getFormData_v1_Response_allOf.cpp
    OAIEzsigndocument_getFormData_v1_Response_mPayload.cpp
    OAIEzsigndocument_getObject_v1_Response.cpp
    OAIEzsigndocument_getObject_v1_Response_allOf.cpp
    OAIEzsigndocument_getObject_v1_Response_mPayload.cpp
    OAIEzsigndocument_getWordsPositions_v1_Request.cpp
    OAIEzsigndocument_getWordsPositions_v1_Response.cpp
    OAIEzsigndocument_getWordsPositions_v1_Response_allOf.cpp
    OAIEzsigndocument_patchObject_v1_Request.cpp
    OAIEzsigndocument_patchObject_v1_Response.cpp
    OAIEzsignfolder_ListElement.cpp
    OAIEzsignfolder_Request.cpp
    OAIEzsignfolder_RequestCompound.cpp
    OAIEzsignfolder_Response.cpp
    OAIEzsignfolder_ResponseCompound.cpp
    OAIEzsignfolder_createObject_v1_Request.cpp
    OAIEzsignfolder_createObject_v1_Response.cpp
    OAIEzsignfolder_createObject_v1_Response_allOf.cpp
    OAIEzsignfolder_createObject_v1_Response_mPayload.cpp
    OAIEzsignfolder_deleteObject_v1_Response.cpp
    OAIEzsignfolder_editObject_v1_Request.cpp
    OAIEzsignfolder_editObject_v1_Response.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response_allOf.cpp
    OAIEzsignfolder_getEzsigndocuments_v1_Response_mPayload.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response_allOf.cpp
    OAIEzsignfolder_getEzsignfoldersignerassociations_v1_Response_mPayload.cpp
    OAIEzsignfolder_getFormsData_v1_Response.cpp
    OAIEzsignfolder_getFormsData_v1_Response_allOf.cpp
    OAIEzsignfolder_getFormsData_v1_Response_mPayload.cpp
    OAIEzsignfolder_getList_v1_Response.cpp
    OAIEzsignfolder_getList_v1_Response_allOf.cpp
    OAIEzsignfolder_getList_v1_Response_mPayload.cpp
    OAIEzsignfolder_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsignfolder_getObject_v1_Response.cpp
    OAIEzsignfolder_getObject_v1_Response_allOf.cpp
    OAIEzsignfolder_getObject_v1_Response_mPayload.cpp
    OAIEzsignfolder_send_v1_Request.cpp
    OAIEzsignfolder_send_v1_Response.cpp
    OAIEzsignfolder_unsend_v1_Response.cpp
    OAIEzsignfoldersignerassociation_Request.cpp
    OAIEzsignfoldersignerassociation_RequestCompound.cpp
    OAIEzsignfoldersignerassociation_RequestCompound_allOf.cpp
    OAIEzsignfoldersignerassociation_Response.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound_User.cpp
    OAIEzsignfoldersignerassociation_ResponseCompound_allOf.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Request.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_createObject_v1_Response_mPayload.cpp
    OAIEzsignfoldersignerassociation_deleteObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_getInPersonLoginUrl_v1_Response_mPayload.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response_allOf.cpp
    OAIEzsignfoldersignerassociation_getObject_v1_Response_mPayload.cpp
    OAIEzsignfoldertype_ListElement.cpp
    OAIEzsignfoldertype_getList_v1_Response.cpp
    OAIEzsignfoldertype_getList_v1_Response_allOf.cpp
    OAIEzsignfoldertype_getList_v1_Response_mPayload.cpp
    OAIEzsignfoldertype_getList_v1_Response_mPayload_allOf.cpp
    OAIEzsignformfield_Response.cpp
    OAIEzsignformfield_ResponseCompound.cpp
    OAIEzsignformfieldgroup_Response.cpp
    OAIEzsignformfieldgroup_ResponseCompound.cpp
    OAIEzsignformfieldgroup_ResponseCompound_allOf.cpp
    OAIEzsignpage_Response.cpp
    OAIEzsignsignature_Request.cpp
    OAIEzsignsignature_RequestCompound.cpp
    OAIEzsignsignature_RequestCompound_allOf.cpp
    OAIEzsignsignature_createObject_v1_Request.cpp
    OAIEzsignsignature_createObject_v1_Response.cpp
    OAIEzsignsignature_createObject_v1_Response_allOf.cpp
    OAIEzsignsignature_createObject_v1_Response_mPayload.cpp
    OAIEzsignsignature_deleteObject_v1_Response.cpp
    OAIEzsignsignature_editObject_v1_Request.cpp
    OAIEzsignsignature_editObject_v1_Response.cpp
    OAIEzsignsignature_getObject_v1_Response.cpp
    OAIEzsignsignature_getObject_v1_Response_allOf.cpp
    OAIEzsignsignaturecustomdate_Request.cpp
    OAIEzsignsigner_Request.cpp
    OAIEzsignsigner_RequestCompound.cpp
    OAIEzsignsigner_RequestCompound_Contact.cpp
    OAIEzsignsigner_RequestCompound_allOf.cpp
    OAIEzsignsigner_Response.cpp
    OAIEzsignsigner_ResponseCompound.cpp
    OAIEzsignsigner_ResponseCompound_Contact.cpp
    OAIEzsignsigner_ResponseCompound_allOf.cpp
    OAIEzsigntemplatepackage_ListElement.cpp
    OAIEzsigntemplatepackage_getList_v1_Response.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_allOf.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_mPayload.cpp
    OAIEzsigntemplatepackage_getList_v1_Response_mPayload_allOf.cpp
    OAIField_eActivesessionSessiontype.cpp
    OAIField_eActivesessionWeekdaystart.cpp
    OAIField_eEzsigndocumentStep.cpp
    OAIField_eEzsignfolderSendreminderfrequency.cpp
    OAIField_eEzsignfolderStep.cpp
    OAIField_eEzsignfoldertypePrivacylevel.cpp
    OAIField_eEzsignsignatureType.cpp
    OAIField_eEzsigntemplatepackageType.cpp
    OAIField_ePhoneType.cpp
    OAIField_eUserType.cpp
    OAIField_eUserTypeSSPR.cpp
    OAIFranchisereferalincome_Request.cpp
    OAIFranchisereferalincome_RequestCompound.cpp
    OAIFranchisereferalincome_RequestCompound_allOf.cpp
    OAIFranchisereferalincome_createObject_v1_Request.cpp
    OAIFranchisereferalincome_createObject_v1_Response.cpp
    OAIFranchisereferalincome_createObject_v1_Response_allOf.cpp
    OAIFranchisereferalincome_createObject_v1_Response_mPayload.cpp
    OAIGlobal_customer_getEndpoint_v1_Response.cpp
    OAIHeader_Accept_Language.cpp
    OAIList_getListpresentation_v1_Response.cpp
    OAIList_getListpresentation_v1_Response_allOf.cpp
    OAIList_getListpresentation_v1_Response_mPayload.cpp
    OAIList_saveListpresentation_v1_Request.cpp
    OAIList_saveListpresentation_v1_Response.cpp
    OAIListpresentation_Request.cpp
    OAIMultilingual_ApikeyDescription.cpp
    OAIPhone_Request.cpp
    OAISspr_resetPasswordRequest_v1_Request.cpp
    OAISspr_resetPassword_v1_Request.cpp
    OAISspr_sendUsernames_v1_Request.cpp
    OAISspr_unlockAccountRequest_v1_Request.cpp
    OAISspr_unlockAccount_v1_Request.cpp
    OAISspr_validateToken_v1_Request.cpp
    OAIUNUSED_ezsigndocument_editObject_v1_Request.cpp
    OAIUNUSED_ezsigndocument_editObject_v1_Response.cpp
    OAIUNUSED_ezsignfolder_editObject_v1_Request.cpp
    OAIUNUSED_ezsignfolder_editObject_v1_Response.cpp
    OAIUNUSED_ezsignfoldersignerassociation_editObject_v1_Request.cpp
    OAIUNUSED_ezsignfoldersignerassociation_editObject_v1_Response.cpp
    OAIUNUSED_ezsignsignature_editObject_v1_Request.cpp
    OAIUNUSED_ezsignsignature_editObject_v1_Response.cpp
    OAIUser_Response.cpp
    OAIUser_createEzsignuser_v1_Request.cpp
    OAIUser_createEzsignuser_v1_Response.cpp
    OAIUser_createEzsignuser_v1_Response_allOf.cpp
    OAIUser_createEzsignuser_v1_Response_mPayload.cpp
    OAIWebhook_Ezsign_DocumentCompleted.cpp
    OAIWebhook_Ezsign_DocumentCompleted_allOf.cpp
    OAIWebhook_Ezsign_FolderCompleted.cpp
    OAIWebhook_Ezsign_FolderCompleted_allOf.cpp
    OAIWebhook_Response.cpp
    OAIWebhook_User_UserCreated.cpp
    OAIWebhook_User_UserCreated_allOf.cpp
    OAIWebsite_Request.cpp
    OAIGlobalCustomerApi.cpp
    OAIModuleAuthenticateApi.cpp
    OAIModuleListApi.cpp
    OAIModuleSsprApi.cpp
    OAIModuleUserApi.cpp
    OAIObjectActivesessionApi.cpp
    OAIObjectApikeyApi.cpp
    OAIObjectEzsignbulksendApi.cpp
    OAIObjectEzsigndocumentApi.cpp
    OAIObjectEzsignfolderApi.cpp
    OAIObjectEzsignfoldersignerassociationApi.cpp
    OAIObjectEzsignfoldertypeApi.cpp
    OAIObjectEzsignsignatureApi.cpp
    OAIObjectEzsigntemplatepackageApi.cpp
    OAIObjectFranchisebrokerApi.cpp
    OAIObjectFranchiseofficeApi.cpp
    OAIObjectFranchisereferalincomeApi.cpp
    OAIObjectPeriodApi.cpp
    OAIHelpers.cpp
    OAIHttpRequest.cpp
    OAIHttpFileElement.cpp
    OAIOauth.cpp
)
target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core Qt5::Network)
if(NOT APPLE)
  target_link_libraries(${PROJECT_NAME} PRIVATE ssl crypto)
endif()

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
